# softbody-simulator

./: .gitignore  .gitmodules  .stylelintrc.js  README.md  index.html  package.json  pnpm-lock.yaml
assets/: start-2.map  start-collision.map  start-small.map  start-split.map  start.map
config/: webpack.common.js  webpack.prod.js
cpu/: Cargo.toml
cpu/src/: constants.rs  lib.rs  main.rs  map.rs  world.rs
create/: Cargo.toml
create/src/: main.rs
js/: main~31743c5a.4bed8d6b0870ca5148e9.bundle.js  main~31743c5a.7556a55fddadd43d2710.bundle.js  main~31743c5a.994c0454da5f335269e1.bundle.js  main~31743c5a.a83aebc79e4a9aed138a.bundle.js  main~31743c5a.ce613a99cf3bc33eec2a.bundle.js  main~31743c5a.d19d35d1c91700a60d72.bundle.js  main~31743c5a.df55e3d8fe2806fd3eb5.bundle.js  main~31743c5a.f6e4830d298690ee50d2.bundle.js  main~31743c5a.fa0f292c631aa414cb87.bundle.js  main~75feb61f.5ec2f90ee515036e31bd.bundle.js  main~e06214dc.826a06500dc9afb9d288.bundle.js
src/: constants.js  draw.frag  draw.vert  index.js  init-data.js  init.frag  init.vert  physics.frag  physics.vert  render.frag  render.vert  setup.js  shader.vert  styles.scss  textures.js  utils.glsl
